feat(login): finished user can login

--- a/reefer_review_mobile/pubspec.yaml
+++ b/reefer_review_mobile/pubspec.yaml
@@ -1,14 +1,17 @@
 name: reefer_review_mobile
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  loading_indicator: ^3.1.1
+  bloc:
+  flutter_bloc:
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +20,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: Ranchers
+      fonts:
+        - asset: assets/fonts/Ranchers-Regular.ttf
+
+  assets:
+    - "assets/images/"
+    - "assets/fonts/"
