--- a/reefer_review_mobile/pubspec.yaml
+++ b/reefer_review_mobile/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   loading_indicator: ^3.1.1
   expandable_text: ^2.1.0
+  meta: ^1.3.0
   bloc:
   flutter_bloc:
 
