--- a/reefer_review_mobile/pubspec.yaml
+++ b/reefer_review_mobile/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   loading_indicator: ^3.1.1
+  expandable_text: ^2.1.0
+  meta: ^1.3.0
   bloc:
   flutter_bloc:
 
