--- a/reefer_review_mobile/pubspec.yaml
+++ b/reefer_review_mobile/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   loading_indicator: ^3.1.1
   expandable_text: ^2.1.0
   meta: ^1.3.0
+  image_picker: ^1.0.2
   bloc:
   flutter_bloc:
 
