--- a/reefer_review_mobile/pubspec.yaml
+++ b/reefer_review_mobile/pubspec.yaml
@@ -22,6 +22,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/images/ic_launcher_round.png"
+  min_sdk_android: 33 # android min sdk min:16, default 21
 
 flutter:
   uses-material-design: true
